main view filter placement now correct on mobile devices

--- a/assets/less/responsive/mobile/views/main.less
+++ b/assets/less/responsive/mobile/views/main.less
@@ -1,11 +1,20 @@
+.mainView {
+	#container {
+		padding-bottom: 0px !important;
+	}
+}	
 #main {
 	overflow-y: scroll;
 	overflow-x: hidden;
+}
+#wall {
+	padding-top: 78px !important;
 }
 header {
 	height: auto !important;
 	padding-bottom: 5px;
 	margin-bottom: 0;
+	margin-top: -78px !important;
 	button {
 		width: 100% !important;
 		margin-bottom: 5px;
@@ -95,6 +104,7 @@ header {
 			.column(8,8);
 			padding-top: 0px !important;
 			margin-bottom: 10px;
+			text-align: left !important;
 			.with {
 				color: #666;
 				.column(2,2);
